fix(test): bind real GrantedAuthority instead of empty authorities list
These integration tests build Authentication manually via
UsernamePasswordAuthenticationToken(claims, null, Collections.emptyList()),
which leaves the actor with zero granted authorities. With real Spring Method
Security enabled, every @PreAuthorize(hasAnyRole(...)) check denies regardless
of the claims' actual role, so the tests were passing/failing for the wrong
reason (or failing outright with 403) rather than exercising real authorization.
Binds SimpleGrantedAuthority("ROLE_" + claims.role()), mirroring the production
JwtAuthenticationFilter pattern.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>